# rocnnet

./: .bazelrc  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile.test  Doxyfile.in  LICENSE  Makefile  README.md  WORKSPACE  __init__.py  books.txt  coverage.info  design.md  devise.ipynb  docker-compose.yml  embedding_extension.ipynb  gui_demo.sh  install_test.sh  karpathy.ipynb  karpathy_game.ipynb  karpathy_model.pbx  mac_fix.sh  main.cpp  makefile  requirements.txt  setup.sh  tests.sh  todo  todo.txt  travis.sh  vis.ipynb  vocab-expansion.ipynb  vox.ipynb  vox_alt.ipynb
app/: .gitmodules  CMakeLists.txt  requirements.txt
app/boostpy/: CMakeLists.txt  main.cpp
app/boostpy/include/: embedding.hpp  mnist_data.hpp
app/boostpy/python/: imageout.py  pickle.py
app/boostpy/src/: embedding.cpp  mnist_data.cpp
app/boostpy/tests/: test_embedding.cpp
app/demo/: dbn_demo.cpp  dq_demo.cpp  dqn_demo.cpp  gd_demo.cpp  rbm_demo.cpp
app/ext/doxygen/: CMakeLists.txt
app/graph_gui/: CMakeLists.txt
app/graph_gui/include/: gui_consumer.hpp  node_model.hpp  qthread_wrap.hpp
app/graph_gui/src/: gui_consumer.cpp  main.cpp  node_model.cpp  qthread_wrap.cpp
app/prebuilt_models/: dqn_test.pbx  gd_test.pbx
app/pydemo/: _init_paths.py  dqn_demo.py  gym_demo.py
app/pylib/scripts/: make_gif.sh
app/pylib/tf_rl/: simulate.py
app/pylib/tf_rl/controller/: _init_paths.py  discrete_deepq.py  human_controller.py
app/pylib/tf_rl/simulation/: karpathy_game.py
app/pylib/tf_rl/utils/: __init__.py  event_queue.py  geometry.py  getch.py  svg.py
app/rocnnet/include/compounds/: dbn.hpp  icompound.hpp  mlp.hpp  rbm.hpp
app/rocnnet/include/layers/: conv_layer.hpp
app/rocnnet/include/models/: db_net.hpp  dq_net.hpp  gd_net.hpp  rbm.hpp
app/rocnnet/ipython/: CMakeLists.txt  dqn_agent.hpp
app/rocnnet/src/compounds/: dbn.cpp  icompound.cpp  mlp.cpp  rbm.cpp
app/rocnnet/src/layers/: conv_layer.cpp  fc_layer.cpp  ilayer.cpp
app/rocnnet/src/models/: db_net.cpp  dq_net.cpp  gd_net.cpp  rbm.cpp
app/scripts/: .gitignore  imgify.sh  mac_fix.sh  qt_setup.sh  tests.sh
app/scripts/env/: boost_setup.sh  cmake_setup.sh  protobuf_setup.sh  qt_setup.sh  ubuntu_analysis.sh  ubuntu_setup.sh
app/scripts/test/: csv_to_png.py  imgify.sh  tests.sh
app/tenncor/: CMakeLists.txt  Doxyfile.in  README.md  design.md
app/tenncor/declare/: graph.cpp  operations.cpp
app/tenncor/ext/gtest/: CMakeLists.txt
app/tenncor/graph_gui/: CMakeLists.txt  graph_gui.cpp  graph_gui.hpp  gui_consumer.cpp  gui_consumer.hpp
app/tenncor/include/edgeinfo/: adjlist_record.hpp  comm_record.hpp  csv_record.hpp  grpc_vis_record.hpp  igraph_record.hpp  visual_record.hpp
app/tenncor/include/graph/: inode.hpp  varptr.hpp
app/tenncor/include/memory/: tensor_io.hpp
app/tenncor/include/tensor/: itensor.hpp  tensor_handler.hpp  tensorshape.hpp
app/tenncor/include/thread/: shareable_cache.hpp  stop_flag.hpp  stoppable_thread.hpp
app/tenncor/include/utils/: futils.hpp  gd_utils.hpp  utils.hpp
app/tenncor/proto/: CMakeLists.txt  tenncor.proto
app/tenncor/proto/cmake/: FindGRPC.cmake  FindProtobuf.cmake
app/tenncor/proto/grpc/: grpc_cli.proto  grpc_gui.proto  grpc_srv.proto  grpc_vis.proto
app/tenncor/proto/serial/: tenncor.proto
app/tenncor/src/edgeinfo/: adjlist_record.cpp  comm_record.cpp  csv_record.cpp  grpc_vis_record.cpp  igraph_record.cpp  visual_record.cpp
app/tenncor/src/graph/: inode.ipp  varptr.ipp
app/tenncor/src/memory/: default_alloc.cpp
app/tenncor/tests/: test.md
measure/comparison/: BUILD.bazel  comparison_matmul.py  comparison_mlp.py  comparison_mlp_grad.py  comparison_mlp_grad_pll.py
measure/perf/: BUILD.bazel  README_PERF.md  measure.hpp
measure/perf/src/: measure.cpp
measure/perf/test/: main.cpp
rocnnet/ipython/: CMakeLists.txt  dqn_agent.cpp  dqn_agent.hpp  dqn_module.i
tenncor/: CMakeLists.txt  README.md  design.md  instr.pl  test.pl
tenncor/declare/: graph.cpp  operations.cpp  tensor.cpp
tenncor/include/: evoker.hpp  tensor.hpp  tensorshape.hpp  utils.hpp
tenncor/include/edgeinfo/: comm_record.hpp  ptrinfo.hpp
tenncor/include/executor/: assign.hpp  gd_utils.hpp  gradient.hpp  group.hpp  ibindable.hpp  iexecutor.hpp  optimizer.hpp  varptr.hpp
tenncor/include/graph/: evoker.hpp  functions.hpp  graph.hpp  group.hpp  iconnector.hpp  initializer.hpp  inode.hpp  ivariable.hpp  varptr.hpp
tenncor/include/memory/: alloc_builder.hpp  allocator.hpp  default_alloc.hpp  iallocator.hpp  ram_alloc.hpp  safe_ptr.hpp  session.hpp  shared_rand.hpp  tensor_io.hpp
tenncor/include/optimization/: optimizer.hpp  update.hpp
tenncor/include/tenncor/: graph.hpp  tenncor.hpp
tenncor/include/tensor/: itensor.hpp  tensor.hpp  tensor_handler.hpp  tensor_jacobi.hpp  tensor_jacobi.ipp  tensor_op.hpp  tensorshape.hpp
tenncor/include/utils/: futils.hpp  gd_utils.hpp  temp_utils.hpp  utils.hpp
tenncor/include/variable/: bin_ops.hpp  elementary.hpp  functions.hpp  mat_ops.hpp  operation.hpp  shared_ops.hpp  unar_ops.hpp  variable.hpp
tenncor/proto/: tenncor.proto
tenncor/src/: tensor.ipp  tensor.tpp  tensorshape.cpp
tenncor/src/edgeinfo/: comm_record.cpp  ptrinfo.cpp
tenncor/src/executor/: assign.ipp  gd_utils.cpp  gradient.ipp  group.ipp  iexecutor.ipp  optimizer.cpp  varptr.ipp
tenncor/src/graph/: iconnector.ipp  initializer.ipp  inode.ipp  ivariable.ipp  varptr.ipp
tenncor/src/memory/: alloc_builder.cpp  allocator.cpp  default_alloc.cpp  iallocator.cpp  ram_alloc.cpp  session.cpp  shared_rand.cpp  tensor_io.ipp
tenncor/src/optimization/: optimizer.cpp  update.ipp  update.tpp
tenncor/src/tensor/: tensor.ipp  tensor_handler.ipp  tensor_jacobi.ipp  tensor_op.ipp  tensorshape.cpp
tenncor/src/utils/: futils.ipp  gd_utils.cpp  temp_utils.cpp  utils.cpp
tenncor/src/variable/: bin_ops.tpp  elementary.tpp  functions.tpp  mat_ops.tpp  operation.tpp  unar_ops.tpp  variable.tpp
tenncor/tests/: CMakeLists.txt  test.md
tenncor/tests/include/: fuzz.h  mockerino.h  util_test.h
tenncor/tests/src/: fuzz.cpp  mockerino.cpp  util_test.cpp
(+457 files in other folders)
