licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
)

######### LIBRARY #########

cc_library(
    name = "perf",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++17"],
    deps = ["@com_github_mingkaic_cppkg//jobs:jobs"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    srcs = ["//perf:test_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//perf:perf",
        "//dbg:print",
        "@gtest//:gtest",
        "@com_github_mingkaic_cppkg//fmts:fmts",
        "@com_github_mingkaic_cppkg//exam:exam",
    ],
    linkstatic = True,
)
